third_party/move/move-compiler-v2/tests/checking/typing/mutate_field_internal.exp

Diagnostics:
error: Invalid operation: access of the field `f` on type `X::S` can only be done within the defining module `0x2::X`
   ┌─ tests/checking/typing/mutate_field_internal.move:12:9
   │
12 │     fun t0() {
   │         ^^
13 │         X::s().f = 0;
   │         -------- accessed here

error: Invalid operation: access of the field `f` on type `X::S` can only be done within the defining module `0x2::X`
   ┌─ tests/checking/typing/mutate_field_internal.move:12:9
   │
12 │     fun t0() {
   │         ^^
   ·
15 │         s.f = 0;
   │         --- accessed here
